--- a/LeetCode/1-10/10. 正则表达式匹配（困难）.md
+++ b/LeetCode/1-10/10. 正则表达式匹配（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[10. 正则表达式匹配](https://leetcode-cn.com/problems/regular-expression-matching/solution/shua-chuan-lc-dong-tai-gui-hua-jie-fa-by-zn9w/)** ，难度为 **困难**。
 
-Tag : 「动态规划」
+Tag : 「动态规划」、「序列 DP」
 
 
 
@@ -11,35 +11,44 @@ Tag : 「动态规划」
 * `'.'` 匹配任意单个字符
 * `'*'` 匹配零个或多个前面的那一个元素
 
-所谓匹配，是要涵盖 整个 字符串 s的，而不是部分字符串。
+所谓匹配，是要涵盖整个字符串 `s` 的，而不是部分字符串。
 
 示例 1：
 ```
 输入：s = "aa" p = "a"
+
 输出：false
+
 解释："a" 无法匹配 "aa" 整个字符串。
 ```
 示例 2:
 ```
 输入：s = "aa" p = "a*"
+
 输出：true
+
 解释：因为 '*' 代表可以匹配零个或多个前面的那一个元素, 在这里前面的元素就是 'a'。因此，字符串 "aa" 可被视为 'a' 重复了一次。
 ```
 示例 3：
 ```
 输入：s = "ab" p = ".*"
+
 输出：true
+
 解释：".*" 表示可匹配零个或多个（'*'）任意字符（'.'）。
 ```
 示例 4：
 ```
 输入：s = "aab" p = "c*a*b"
+
 输出：true
+
 解释：因为 '*' 表示零个或多个，这里 'c' 为 0 个, 'a' 被重复一次。因此可以匹配字符串 "aab"。
 ```
 示例 5：
 ```
 输入：s = "mississippi" p = "mis*is*p*."
+
 输出：false
 ```
 
@@ -60,25 +69,29 @@ Tag : 「动态规划」
 * `'.'`：能够匹配 `s` 中同一位置的任意字符
 * `'*'`：不能够单独使用 `'*'`，必须和前一个字符同时搭配使用，数据保证了 `'*'` 能够找到前面一个字符。能够匹配 `s` 中同一位置字符任意次。
 
-所以本题关键是分析当出现 `a*` 这种字符时，是匹配 0 个 a、还是 1 个 a、还是 2 个 a ...
+所以本题关键是分析当出现 `a*` 这种字符时，是匹配 $0$ 个 `a`、还是 $1$ 个 `a`、还是 $2$ 个 `a` ...
 
 本题可以使用动态规划进行求解：
 
-* 状态定义：`f(i,j)` 代表考虑 `s` 中以 `i` 为结尾的子串和 `p` 中的 `j` 为结尾的子串是否匹配。即最终我们要求的结果为 `f[n][m]` 。
+* 状态定义：`f(i,j)` 代表考虑 `s` 中以 `i` 为结尾的子串和 `p` 中的 `j` 为结尾的子串是否匹配。最终我们要求的结果为 `f[n][m]` 。
 
 * 状态转移：也就是我们要考虑 `f(i,j)` 如何求得，前面说到了 `p` 有三种字符，所以这里的状态转移也要分三种情况讨论：
   
-  1. `p[j]` 为普通字符：匹配的条件是前面的字符匹配，同时 `s` 中的第 `i` 个字符和 `p` 中的第 `j` 位相同。 即 `f(i,j) = f(i - 1, j - 1) && s[i] == p[j]` 。
+  1. `p[j]` 为普通字符：匹配的条件是前面的字符匹配，同时 `s` 中的第 `i` 个字符和 `p` 中的第 `j` 位相同。 
   
-  2. `p[j]` 为 `'.'`：匹配的条件是前面的字符匹配， `s` 中的第 `i` 个字符可以是任意字符。即 `f(i,j) = f(i - 1, j - 1) && p[j] == '.'`。
+     `f(i,j) = f(i - 1, j - 1) && s[i] == p[j]` 。
 	
-	3. `p[j]` 为 `'*'`：读得 `p[j - 1]` 的字符，例如为字符 a。 然后根据 `a*` 实际匹配 `s` 中 `a` 的个数是 0 个、1 个、2 个 ...
+	2. `p[j]` 为 `'.'`：匹配的条件是前面的字符匹配， `s` 中的第 `i` 个字符可以是任意字符。
 	
-    3.1. 当匹配为 0 个：`f(i,j) = f(i, j - 2)`
+     `f(i,j) = f(i - 1, j - 1) && p[j] == '.'`。
 
-    3.2. 当匹配为 1 个：`f(i,j) = f(i - 1, j - 2) && (s[i] == p[j - 1] || p[j - 1] == '.')`
+  3. `p[j]` 为 `'*'`：读得 `p[j - 1]` 的字符，例如为字符 `a`。 然后根据 `a*` 实际匹配 `s` 中 `a` 的个数是 $0$ 个、$1$ 个、$2$ 个 ...
 
-    3.3. 当匹配为 2 个：`f(i,j) = f(i - 2, j - 2) && ((s[i] == p[j - 1] && s[i - 1] == p[j - 1]) || p[j] == '.')`
+    3.1. 当匹配为 $0$ 个：`f(i,j) = f(i, j - 2)`
+  
+    3.2. 当匹配为 $1$ 个：`f(i,j) = f(i - 1, j - 2) && (s[i] == p[j - 1] || p[j - 1] == '.')`
+  
+    3.3. 当匹配为 $2$ 个：`f(i,j) = f(i - 2, j - 2) && ((s[i] == p[j - 1] && s[i - 1] == p[j - 1]) || p[j] == '.')`
 
 **我们知道，通过「枚举」来确定 `*` 到底匹配多少个 `a` 这样的做法，算法复杂度是很高的。**
 
