--- a/LeetCode/1141-1150/1143. 最长公共子序列（中等）.md
+++ b/LeetCode/1141-1150/1143. 最长公共子序列（中等）.md
@@ -172,7 +172,7 @@ function longestCommonSubsequence(s1: string, s2: string): number {
 * `s1[i-1]!=s2[j-1]` : $f[i][j]=max(f[i-1][j], f[i][j-1])$。代表不使用 $s1[i-1]$ 形成最长公共子序列的长度、不使用 $s2[j-1]$ 形成最长公共子序列的长度。这两种情况中的最大值。
 
 Java 代码：
-```Java []
+```Java
 class Solution {
     public int longestCommonSubsequence(String s1, String s2) {
         int n = s1.length(), m = s2.length();
