--- a/LeetCode/251-260/260. 只出现一次的数字 III（中等）.md
+++ b/LeetCode/251-260/260. 只出现一次的数字 III（中等）.md
@@ -6,13 +6,9 @@ Tag : 「模拟」、「哈希表」、「异或」
 
 
 
-给定一个整数数组 `nums`，其中恰好有两个元素只出现一次，其余所有元素均出现两次。找出只出现一次的那两个元素。你可以按 任意顺序 返回答案。
+给定一个整数数组 `nums`，其中恰好有两个元素只出现一次，其余所有元素均出现两次。
 
-
-
-进阶：你的算法应该具有线性时间复杂度。你能否仅使用常数空间复杂度来实现？
-
-
+找出只出现一次的那两个元素，你可以按任意顺序返回答案。
 
 示例 1：
 
@@ -36,9 +32,13 @@ Tag : 「模拟」、「哈希表」、「异或」
 输出：[1,0]
 ```
 提示：
-* $2 <= nums.length <= 3 * 10^4$
+* $2 <= nums.length <= 3 \times 10^4$
+
 * $-2^{31} <= nums[i] <= 2^{31} - 1$
+
 * 除两个只出现一次的整数外，`nums` 中的其他数字都出现两次
+
+进阶：你的算法应该具有线性时间复杂度，你能否仅使用常数空间复杂度来实现？
 
 ---
 
@@ -46,7 +46,7 @@ Tag : 「模拟」、「哈希表」、「异或」
 
 朴素的做法是利用哈希表进行统计，最后将统计次数为 $1$ 的元素加入答案。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int[] singleNumber(int[] nums) {
@@ -61,6 +61,40 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<int> singleNumber(vector<int>& nums) {
+        unordered_map<int, int> cmap;
+        for (int num : nums) cmap[num]++;
+        vector<int> ans;
+        for (int num : nums) {
+            if (cmap[num] == 1) ans.push_back(num);
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def singleNumber(self, nums: List[int]) -> List[int]:
+        count_map = Counter(nums)
+        return [num for num in nums if count_map[num] == 1]
+```
+TypeScript 代码：
+```TypeScript
+function singleNumber(nums: number[]): number[] {
+    const countMap: Map<number, number> = new Map();
+    for (const num of nums) countMap.set(num, (countMap.get(num) || 0) + 1);
+    const ans: number[] = [];
+    for (const num of nums) {
+        if (countMap.get(num) === 1) ans.push(num);
+    }
+    return ans;
+};
+```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
 
@@ -74,13 +108,12 @@ class Solution {
 
 对 $nums$ 进行遍历，对第 $k$ 位分别为 $0$ 和 $1$ 的元素分别求异或和（两答案必然会被分到不同的组），即为答案。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int[] singleNumber(int[] nums) {
-        int sum = 0;
+        int sum = 0, k = -1;
         for (int i : nums) sum ^= i;
-        int k = -1;
         for (int i = 31; i >= 0 && k == -1; i--) {
             if (((sum >> i) & 1) == 1) k = i;
         }
@@ -92,6 +125,57 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<int> singleNumber(vector<int>& nums) {
+        int sum = 0, k = -1;
+        for (int num : nums) sum ^= num;
+        for (int i = 31; i >= 0 && k == -1; i--) {
+            if ((sum >> i) & 1) k = i;
+        }
+        vector<int> ans(2, 0);
+        for (int num : nums) {
+            if ((num >> k) & 1) ans[1] ^= num;
+            else ans[0] ^= num;
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def singleNumber(self, nums: List[int]) -> List[int]:
+        sum_val, k = 0, -1
+        for num in nums: sum_val ^= num
+        for i in range(31, -1, -1):
+            if (sum_val >> i) & 1:
+                k = i
+                break
+        ans = [0, 0]
+        for num in nums:
+            if (num >> k) & 1: ans[1] ^= num
+            else: ans[0] ^= num
+        return ans
+```
+TypeScript 代码：
+```TypeScript
+function singleNumber(nums: number[]): number[] {
+    let sum = 0, k = -1;
+    for (const num of nums) sum ^= num;
+    for (let i = 31; i >= 0 && k === -1; i--) {
+        if (((sum >> i) & 1) === 1) k = i;
+    }
+    const ans: number[] = [0, 0];
+    for (const num of nums) {
+        if (((num >> k) & 1) === 1) ans[1] ^= num;
+        else ans[0] ^= num;
+    }
+    return ans;
+};
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(1)$
