--- a/LeetCode/31-40/32. 最长有效括号（困难）.md
+++ b/LeetCode/31-40/32. 最长有效括号（困难）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[32. 最长有效括号](https://leetcode-cn.com/problems/longest-valid-parentheses/solution/shua-chuan-lc-miao-dong-xi-lie-shi-yong-95ezk/)** ，难度为 **困难**。
+这是 LeetCode 上的 **[32. 最长有效括号](https://leetcode.cn/problems/longest-valid-parentheses/solutions/577327/shua-chuan-lc-miao-dong-xi-lie-shi-yong-95ezk/)** ，难度为 **困难**。
 
 Tag : 「栈」、「括号问题」
 
@@ -32,8 +32,8 @@ Tag : 「栈」、「括号问题」
 ```
 
 提示：
-* 0 <= s.length <= 3 * $10^4$
-* s[i] 为 `'('` 或 `')'`
+* $0 <= s.length <= 3 \times 10^4$
+* $s[i]$ 为 `'('` 或 `')'`
 
 
 ---
@@ -42,22 +42,24 @@ Tag : 「栈」、「括号问题」
 
 从前往后扫描字符串 `s`。
 
-使用 `i` 来记录当前遍历到的位置，使用 `j` 来记录最近的最长有效括号的开始位置的「前一个位置」。
+用 `i` 来记录当前遍历到的位置，用 `j` 来记录最近的最长有效括号的开始位置的「前一个位置」。
 
 只对 `'('` 进行入栈（入栈的是对应的下标），当遍历到 `')'` 的时候，由于栈中只有 `'('`，所以可以直接弹出一个 `'('` 与之匹配（如果有的话）。
 
 再检查栈中是否还有 `'('`，如果有使用栈顶元素的下标来计算长度，否则使用 `j` 下标来计算长度。
 
-代码：
+该做法的本质：**栈里只存放待匹配的 `(` 符号，虽然这些 `(` 在原字符串中的下标不一定连续，但 `(` 之间一定为有效括号，因此可以使用栈顶元素作为有效括号的左边界计算长度**。
+
+举个 🌰，对于 `s` = `((())((` 的情况，当整个字符串处理完，栈内剩下的不是所有的 `(` 符号（不是 $5$ 个），而是剩余待匹配的 `(` 符号（而是 $3$ 个，即从左往右第 $1$、$4$ 和 $5$ 个 `(`），虽然第 $1$ 和第 $4$ 个 `(` 符号在 `s` 中不连续，但其之间必然是有效括号。
+
+Java 代码：
 ```Java
 class Solution {
     public int longestValidParentheses(String s) {
-        int n = s.length();
-        char[] cs = s.toCharArray();
         Deque<Integer> d = new ArrayDeque<>();
-        int ans = 0;
+        int n = s.length(), ans = 0;
         for (int i = 0, j = -1; i < n; i++) {
-            if (cs[i] == '(') {
+            if (s.charAt(i) == '(') {
                 d.addLast(i);
             } else {
                 if (!d.isEmpty()) {
@@ -74,7 +76,75 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：每个字符最多进栈和出栈一次。复杂度为 $O(n)$
+C++ 代码：
+```C++
+class Solution {
+public:
+    int longestValidParentheses(string s) {
+        stack<int> d;
+        int n = s.length(), ans = 0;
+        for (int i = 0, j = -1; i < n; i++) {
+            if (s[i] == '(') {
+                d.push(i);
+            } else {
+                if (!d.empty()) {
+                    d.pop();
+                    int top = j;
+                    if (!d.empty()) top = d.top();
+                    ans = max(ans, i - top);
+                } else {
+                    j = i;
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+from collections import deque
+
+class Solution:
+    def longestValidParentheses(self, s: str) -> int:
+        d = deque()
+        n, ans, j = len(s), 0, -1
+        for i in range(n):
+            if s[i] == '(':
+                d.append(i)
+            else:
+                if d:
+                    d.pop()
+                    top = j
+                    if d: top = d[-1]
+                    ans = max(ans, i - top)
+                else:
+                    j = i
+        return ans
+```
+TypeScript 代码：
+```TypeScript
+function longestValidParentheses(s: string): number {
+    const d: number[] = [];
+    let n = s.length, ans = 0;
+    for (let i = 0, j = -1; i < n; i++) {
+        if (s[i] === '(') {
+            d.push(i);
+        } else {
+            if (d.length) {
+                d.pop();
+                let top = j;
+                if (d.length) top = d[d.length - 1]
+                ans = Math.max(ans, i - top);
+            } else {
+                j = i;
+            }
+        }
+    }
+    return ans;
+};
+```
+* 时间复杂度：每个字符最多进栈和出栈一次，复杂度为 $O(n)$
 * 空间复杂度：$O(n)$
 
 ---
