--- a/LeetCode/41-50/44. 通配符匹配（困难）.md
+++ b/LeetCode/41-50/44. 通配符匹配（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[44. 通配符匹配](https://leetcode-cn.com/problems/wildcard-matching/solution/gong-shui-san-xie-xiang-jie-dong-tai-gui-ifyx/)** ，难度为 **困难**。
 
-Tag : 「线性 DP」
+Tag : 「动态规划」、「序列 DP」
 
 
 
@@ -92,45 +92,60 @@ p = "a*c?b"
 
 本题可以使用动态规划进行求解：
 
-* 状态定义：`f(i,j)` 代表考虑 `s` 中以 `i` 为结尾的子串和 `p` 中的 `j` 为结尾的子串是否匹配。即最终我们要求的结果为 `f[n][m]` 。
+* 状态定义：`f(i,j)` 代表考虑 `s` 中以 `i` 为结尾的子串和 `p` 中的 `j` 为结尾的子串是否匹配。最终我们要求的结果为 `f[n][m]` 。
 
 * 状态转移：也就是我们要考虑 `f(i,j)` 如何求得，前面说到了 `p` 有三种字符，所以这里的状态转移也要分三种情况讨论：
   
-  1. `p[j]` 为普通字符：匹配的条件是前面的字符匹配，同时 `s` 中的第 `i` 个字符和 `p` 中的第 `j` 位相同。 即 `f(i,j) = f(i - 1, j - 1) && s[i] == p[j]` 。
-  2. `p[j]` 为 `'.'`：匹配的条件是前面的字符匹配，`s` 中的第 `i` 个字符可以是任意字符。即 `f(i,j) = f(i - 1, j - 1) && p[j] == '.'`。
+  1. `p[j]` 为普通字符：匹配的条件是前面的字符匹配，同时 `s` 中的第 `i` 个字符和 `p` 中的第 `j` 位相同。 
+  
+      即 `f(i,j) = f(i - 1, j - 1) && s[i] == p[j]` 。
+  
+  2. `p[j]` 为 `'?'`：匹配的条件是前面的字符匹配，`s` 中的第 `i` 个字符可以是任意字符。
+  
+      即 `f(i,j) = f(i - 1, j - 1) && p[j] == '?'`。
+  
   3. `p[j]` 为 `'*'`：可匹配任意长度的字符，可以匹配 0 个字符、匹配 1 个字符、匹配 2 个字符
   
       3.1. 当匹配为 0 个：`f(i,j) = f(i, j - 1)`
-      
+  
       3.2. 当匹配为 1 个：`f(i,j) = f(i - 1, j - 1)`
-      
+  
       3.3. 当匹配为 2 个：`f(i,j) = f(i - 2, j - 1)`
-      
+  
       ...
-      
+  
       3.k. 当匹配为 k 个：`f(i,j) = f(i - k, j - 1)`
-      
+  
 
-因此对于 `p[j] = '*'` 的情况，想要 `f(i, j) = true`，只需要其中一种情况为 `true` 即可。也就是状态之间是「或」的关系：
+因此对于 `p[j] = '*'` 的情况，想要 `f(i, j) = true`，只需要其中一种情况为 `true` 即可。
 
-$$f[i][j] = f[i][j - 1] || f[i - 1][j - 1] || ... || f[i - k][j - 1] (i >= k)$$
-      
+也就是状态之间是「或」的关系：
+$$
+f[i][j] = f[i][j - 1] || f[i - 1][j - 1] || ... || f[i - k][j - 1] (i >= k)
+$$
+
 这意味着我们要对 `k` 种情况进行枚举检查吗？
 
 其实并不用，对于这类问题，我们通常可以通过「代数」进简化，将 `i - 1` 代入上述的式子：
 
-$$f[i - 1][j] = f[i - 1][j - 1] || f[i - 2][j - 1] || ... || f[i - k][j - 1] (i >= k)$$
+$$
+f[i - 1][j] = f[i - 1][j - 1] || f[i - 2][j - 1] || ... || f[i - k][j - 1] (i >= k)
+$$
 
-可以发现，`f[i - 1][j]` 与 `f[i][j]` 中的 `f[i][j - 1]` 开始的后半部分是一样的，因此有：
+可以发现，`f[i - 1][j]` 与 `f[i][j]` 中的 `f[i][j - 1]` 开始的后半部分是一样的。
 
-$$f[i][j] = f[i][j - 1] || f[i - 1][j] (i >= 1)$$
+因此有：
+
+$$
+f[i][j] = f[i][j - 1] || f[i - 1][j] (i >= 1)
+$$
 
 *PS. 其实类似的推导，我在 [10. 正则表达式匹配](https://mp.weixin.qq.com/s?__biz=MzU4NDE3MTEyMA==&mid=2247484130&idx=1&sn=af3517194634dde1652ec72eb5ea9ff2&chksm=fd9ca9fdcaeb20eb1fd7509e3adf8fee6f75d77b8afbd30067ac11a56bd77b5066b0f164eb49&token=840813710&lang=zh_CN#rd) 也做过，第 10 题的推导过程还涉及等差概念，我十分推荐你去回顾一下。如果你能搞懂第 10 题整个过程，这题其实就是小 Case。*
 
 编码细节：
 
 1. 通过上述的推导过程，你会发现设计不少的「回退检查」操作（即遍历到 `i` 位，要回头检查 `i - 1` 等），因此我们可以将「哨兵技巧」应用到本题，往两个字符串的头部插入哨兵
-2. 对于 `p[j] = '.'` 和 `p[j] = 普通字符` 的情况，想要为 `true`，其实有共同的条件 `f[i - 1][j - 1] == true`，因此可以合到一起来做
+2. 对于 `p[j] = '?'` 和 `p[j] = 普通字符` 的情况，想要为 `true`，其实有共同的条件 `f[i - 1][j - 1] == true`，因此可以合到一起来做
 
 Java 代码：
 ```Java
