--- a/LeetCode/581-590/590. N 叉树的后序遍历（简单）.md
+++ b/LeetCode/581-590/590. N 叉树的后序遍历（简单）.md
@@ -6,9 +6,9 @@ Tag : 「递归」、「迭代」、「非递归」、「DFS」、「BFS」
 
 
 
-给定一个 $n$ 叉树的根节点 $root$ ，返回 其节点值的 **后序遍历** 。
+给定一个 $n$ 叉树的根节点 $root$ ，返回 其节点值的**后序遍历**。
 
-$n$ 叉树 在输入中按层序遍历进行序列化表示，每组子节点由空值 `null` 分隔（请参见示例）。
+$n$ 叉树在输入中按层序遍历进行序列化表示，每组子节点由空值 `null` 分隔（请参见示例）。
 
 示例 1：
 ![](https://assets.leetcode.com/uploads/2018/10/12/narytreeexample.png)
@@ -38,7 +38,7 @@ $n$ 叉树 在输入中按层序遍历进行序列化表示，每组子节点由
 
 常规做法，不再赘述。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     List<Integer> ans = new ArrayList<>();
@@ -52,6 +52,48 @@ class Solution {
         ans.add(root.val);
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<int> postorder(Node* root) {
+        vector<int> ans;
+        dfs(root, ans);
+        return ans;
+    }
+    void dfs(Node* root, vector<int>& ans) {
+        if (!root) return;
+        for (Node* child : root->children) dfs(child, ans);
+        ans.push_back(root->val);
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def postorder(self, root: 'Node') -> List[int]:
+        def dfs(root, ans):
+            if not root: return
+            for child in root.children:
+                dfs(child, ans)
+            ans.append(root.val)
+        ans = []
+        dfs(root, ans)
+        return ans
+```
+TypeScript 代码：
+```TypeScript
+function postorder(root: Node | null): number[] {
+    const dfs = function(root: Node | null, ans: number[]): void {
+        if (!root) return ;
+        for (const child of root.children) dfs(child, ans);
+        ans.push(root.val);
+    };
+    const ans: number[] = [];
+    dfs(root, ans);
+    return ans;
+};
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：忽略递归带来的额外空间开销，复杂度为 $O(1)$
@@ -67,7 +109,7 @@ class Solution {
 否则更新当前元素遍历过的子节点数量，并重新入队，即将 $(cnt + 1, node)$ 入队，以及将下一子节点 $(0, node.children[cnt])$ 进行首次入队。
 
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public List<Integer> postorder(Node root) {
@@ -88,6 +130,61 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<int> postorder(Node* root) {
+        vector<int> ans;
+        stack<pair<int, Node*>> st;
+        st.push({0, root});
+        while (!st.empty()) {
+            auto [cnt, t] = st.top();
+            st.pop();
+            if (!t) continue;
+            if (cnt == t->children.size()) ans.push_back(t->val);
+            if (cnt < t->children.size()) {
+                st.push({cnt + 1, t});
+                st.push({0, t->children[cnt]});
+            }
+        }
+        return ans;
+    }   
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def postorder(self, root: 'Node') -> List[int]:
+        ans = []
+        stack = [(0, root)]
+        while stack:
+            cnt, t = stack.pop()
+            if not t: continue
+            if cnt == len(t.children):
+                ans.append(t.val)
+            if cnt < len(t.children):
+                stack.append((cnt + 1, t))
+                stack.append((0, t.children[cnt]))
+        return ans
+```
+TypeScript 代码：
+```TypeScript
+function postorder(root: Node | null): number[] {
+    const ans = [], stack = [];
+    stack.push([0, root]);
+    while (stack.length > 0) {
+        const [cnt, t] = stack.pop()!;
+        if (!t) continue;
+        if (cnt === t.children.length) ans.push(t.val);
+        if (cnt < t.children.length) {
+            stack.push([cnt + 1, t]);
+            stack.push([0, t.children[cnt]]);
+        }
+    }
+    return ans;
+};
+```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
 
@@ -101,7 +198,7 @@ class Solution {
 
 在迭代过程中记录当前栈帧位置状态 `loc`，在每个状态流转节点做相应操作。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public List<Integer> postorder(Node root) {
@@ -123,6 +220,69 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<int> postorder(Node* root) {
+        vector<int> ans;
+        stack<pair<int, Node*>> st;
+        st.push({0, root});
+        while (!st.empty()) {
+            int loc = st.top().first;
+            Node* t = st.top().second;
+            st.pop();
+            if (!t) continue;
+            if (loc == 0) {
+                st.push({1, t});
+                for (int i = t->children.size() - 1; i >= 0; i--) {
+                    st.push({0, t->children[i]});
+                }
+            } else if (loc == 1) {
+                ans.push_back(t->val);
+            }
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def postorder(self, root: 'Node') -> List[int]:
+        ans = []
+        stack = [(0, root)]
+        while stack:
+            loc, t = stack.pop()
+            if not t: continue
+            if loc == 0:
+                stack.append((1, t))
+                for child in reversed(t.children):
+                    stack.append((0, child))
+            elif loc == 1:
+                ans.append(t.val)
+        return ans
+```
+TypeScript 代码：
+```TypeScript
+function postorder(root: Node | null): number[] {
+    const ans: number[] = [];
+    const stack: [number, Node | null][] = [[0, root]];
+    while (stack.length > 0) {
+        const [loc, t] = stack.pop()!;
+        if (!t) continue;
+        if (loc === 0) {
+            stack.push([1, t]);
+            for (let i = t.children.length - 1; i >= 0; i--) {
+                stack.push([0, t.children[i]]);
+            }
+        } else if (loc === 1) {
+            ans.push(t.val);
+        }
+    }
+    return ans;
+};
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
