--- a/LeetCode/1031-1040/1035. 不相交的线（中等）.md
+++ b/LeetCode/1031-1040/1035. 不相交的线（中等）.md
@@ -6,11 +6,11 @@ Tag : 「最长公共子序列」、「序列 DP」、「LCS」
 
 
 
-在两条独立的水平线上按给定的顺序写下 nums1 和 nums2 中的整数。
+在两条独立的水平线上按给定的顺序写下 `s1` 和 `s2` 中的整数。
 
-现在，可以绘制一些连接两个数字 nums1[i] 和 nums2[j] 的直线，这些直线需要同时满足满足：
+现在，可以绘制一些连接两个数字 $s1[i]$ 和 $s2[j]$ 的直线，这些直线需要同时满足满足：
 
-*  nums1[i] == nums2[j]
+*  $s1[i] = s2[j]$
 * 且绘制的直线不与任何其他连线（非水平线）相交。
 
 请注意，连线即使在端点也不能相交：每个数字只能属于一条连线。
@@ -24,38 +24,36 @@ Tag : 「最长公共子序列」、「序列 DP」、「LCS」
 <img src="https://assets.leetcode-cn.com/aliyun-lc-upload/uploads/2019/04/28/142.png" style="zoom:18%;" />
 
 ```
-输入：nums1 = [1,4,2], nums2 = [1,2,4]
+输入：s1 = [1,4,2], s2 = [1,2,4]
 
 输出：2
 
 解释：可以画出两条不交叉的线，如上图所示。 
-但无法画出第三条不相交的直线，因为从 nums1[1]=4 到 nums2[2]=4 的直线将与从 nums1[2]=2 到 nums2[1]=2 的直线相交。
+但无法画出第三条不相交的直线，因为从 s1[1]=4 到 s2[2]=4 的直线将与从 s1[2]=2 到 s2[1]=2 的直线相交。
 ```
 示例 2：
 ```
-输入：nums1 = [2,5,1,2,5], nums2 = [10,5,2,1,5,2]
+输入：s1 = [2,5,1,2,5], s2 = [10,5,2,1,5,2]
 
 输出：3
 ```
 示例 3：
 ```
-输入：nums1 = [1,3,7,1,7,5], nums2 = [1,9,2,5,1]
+输入：s1 = [1,3,7,1,7,5], s2 = [1,9,2,5,1]
 
 输出：2
 ```
 
 提示：
-* 1 <= nums1.length <= 500
-* 1 <= nums2.length <= 500
-* 1 <= nums1[i], nums2[i] <= 2000
+* $1 <= s1.length <= 500$
+* $1 <= s2.length <= 500$
+* $1 <= s1[i], s2[i] <= 2000$
 
 ---
 
 ### 动态规划
 
 这是一道「[最长公共子序列（LCS）](https://leetcode-cn.com/problems/longest-common-subsequence/solution/gong-shui-san-xie-zui-chang-gong-gong-zi-xq0h/)」的轻度变形题。
-
-为了让你更好的与「[最长公共子序列（LCS）](https://leetcode-cn.com/problems/longest-common-subsequence/solution/gong-shui-san-xie-zui-chang-gong-gong-zi-xq0h/)」裸题进行对比，我们使用 $s1$ 代指 $nums1$，$s2$ 代指 $nums2$。
 
 对于这类题都使用如下「状态定义」即可：
 
@@ -87,7 +85,7 @@ $$
 
 上述分析过程建议加深理解，估计很多同学能 AC 但其实并不知道 LCS 问题的状态转移是包含了「重复状态比较」的。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int maxUncrossedLines(int[] s1, int[] s2) {
@@ -105,8 +103,56 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：$O(n * m)$
-* 空间复杂度：$O(n * m)$
+C++ 代码：
+```C++
+class Solution {
+public:
+    int maxUncrossedLines(vector<int>& s1, vector<int>& s2) {
+        int n = s1.size(), m = s2.size();
+        vector<vector<int>> f(n + 1, vector<int>(m + 1, 0));
+        for (int i = 1; i <= n; ++i) {
+            for (int j = 1; j <= m; ++j) {
+                f[i][j] = max(f[i - 1][j], f[i][j - 1]);
+                if (s1[i - 1] == s2[j - 1]) {
+                    f[i][j] = max(f[i][j], f[i - 1][j - 1] + 1);
+                }
+            }
+        }
+        return f[n][m];
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def maxUncrossedLines(self, s1: List[int], s2: List[int]) -> int:
+        n, m = len(s1), len(s2)
+        f = [[0] * (m + 1) for _ in range(n + 1)]
+        for i in range(1, n + 1):
+            for j in range(1, m + 1):
+                f[i][j] = max(f[i - 1][j], f[i][j - 1])
+                if s1[i - 1] == s2[j - 1]:
+                    f[i][j] = max(f[i][j], f[i - 1][j - 1] + 1)
+        return f[n][m]
+```
+TypeScript 代码：
+```TypeScript
+function maxUncrossedLines(s1: number[], s2: number[]): number {
+    const n = s1.length, m = s2.length;
+    const f = Array.from({ length: n + 1 }, () => Array(m + 1).fill(0));
+    for (let i = 1; i <= n; ++i) {
+        for (let j = 1; j <= m; ++j) {
+            f[i][j] = Math.max(f[i - 1][j], f[i][j - 1]);
+            if (s1[i - 1] === s2[j - 1]) {
+                f[i][j] = Math.max(f[i][j], f[i - 1][j - 1] + 1);
+            }
+        }
+    }
+    return f[n][m];
+};
+```
+* 时间复杂度：$O(n \times m)$
+* 空间复杂度：$O(n \times m)$
 
 ---
 
