--- a/LeetCode/521-530/524. 通过删除字母匹配到字典里最长单词（中等）.md
+++ b/LeetCode/521-530/524. 通过删除字母匹配到字典里最长单词（中等）.md
@@ -4,9 +4,13 @@
 
 Tag : 「双指针」、「贪心」、「排序」
 
-给你一个字符串 s 和一个字符串数组 dictionary 作为字典，找出并返回字典中最长的字符串，该字符串可以通过删除 s 中的某些字符得到。
 
-如果答案不止一个，返回长度最长且字典序最小的字符串。如果答案不存在，则返回空字符串。
+
+给你一个字符串 `s` 和一个字符串数组 `dictionary` 作为字典，找出并返回字典中最长的字符串，该字符串可以通过删除 `s` 中的某些字符得到。
+
+如果答案不止一个，返回长度最长且字典序最小的字符串。
+
+如果答案不存在，则返回空字符串。
 
 示例 1：
 ```
@@ -23,10 +27,10 @@ Tag : 「双指针」、「贪心」、「排序」
 
 
 提示：
-* 1 <= s.length <= 1000
-* 1 <= dictionary.length <= 1000
-* 1 <= dictionary[i].length <= 1000
-* s 和 dictionary[i] 仅由小写英文字母组成
+* $1 <= s.length <= 1000$
+* $1 <= dictionary.length <= 1000$
+* $1 <= dictionary[i].length <= 1000$
+* `s` 和 `dictionary[i]` 仅由小写英文字母组成
 
 ---
 
@@ -51,16 +55,16 @@ Tag : 「双指针」、「贪心」、「排序」
 
 > 证明：对于某个字符 `dictionary[x][j]` 而言，选择 `s` 中 **当前** 所能选择的下标最小的位置进行匹配，对于后续所能进行选择方案，会严格覆盖不是选择下标最小的位置，因此结果不会变差。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
-    public String findLongestWord(String s, List<String> list) {
-        Collections.sort(list, (a,b)->{
+    public String findLongestWord(String s, List<String> dictionary) {
+        Collections.sort(dictionary, (a,b)->{
             if (a.length() != b.length()) return b.length() - a.length();
             return a.compareTo(b);
         });
         int n = s.length();
-        for (String ss : list) {
+        for (String ss : dictionary) {
             int m = ss.length();
             int i = 0, j = 0;
             while (i < n && j < m) {
@@ -73,7 +77,65 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：令 `n` 为 `s` 的长度，`m` 为 `dictionary` 的长度。排序复杂度为 $O(m\log{m})$；对 `dictionary` 中的每个字符串进行检查，单个字符串的检查复杂度为 $O(\min(n, dictionary[i]))\approx O(n)$。整体复杂度为 $O(m\log{m} + m*n)$
+C++ 代码：
+```C++
+class Solution {
+public:
+    string findLongestWord(string s, vector<string>& dictionary) {
+        sort(dictionary.begin(), dictionary.end(), [](const string& a, const string& b) {
+            if (a.length() != b.length()) return b.length() < a.length();
+            return a < b;
+        });
+        int n = s.length();
+        for (const string& word : dictionary) {
+            int m = word.length();
+            int i = 0, j = 0;
+            while (i < n && j < m) {
+                if (s[i] == word[j]) j++;
+                i++;
+            }
+            if (j == m) return word;
+        }
+        return "";
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def findLongestWord(self, s: str, dictionary: List[str]) -> str:
+        dictionary.sort(key=lambda x: (-len(x), x))
+        n = len(s)
+        for word in dictionary:
+            m = len(word)
+            i, j = 0, 0
+            while i < n and j < m:
+                if s[i] == word[j]: j += 1
+                i += 1
+            if j == m: return word
+        return ""
+```
+TypeScript 代码：
+```TypeScript
+function findLongestWord(s: string, dictionary: string[]): string {
+    dictionary.sort((a, b) => {
+        if (a.length !== b.length) return b.length - a.length;
+        return a.localeCompare(b);
+    });
+    const n = s.length;
+    for (const word of dictionary) {
+        const m = word.length;
+        let i = 0, j = 0;
+        while (i < n && j < m) {
+            if (s[i] === word[j]) j++;
+            i++;
+        }
+        if (j === m) return word;
+    }
+    return "";  
+};
+```
+* 时间复杂度：令 `n` 为 `s` 的长度，`m` 为 `dictionary` 的长度。排序复杂度为 $O(m\log{m})$；对 `dictionary` 中的每个字符串进行检查，单个字符串的检查复杂度为 $O(\min(n, dictionary[i]))\approx O(n)$。整体复杂度为 $O(m\log{m} + m \times n)$
 * 空间复杂度：$O(\log{m})$
 
 ---
