--- a/LeetCode/81-90/83. 删除排序链表中的重复元素（简单）.md
+++ b/LeetCode/81-90/83. 删除排序链表中的重复元素（简单）.md
@@ -2,49 +2,47 @@
 
 这是 LeetCode 上的 **[83. 删除排序链表中的重复元素](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-list/solution/tong-yong-shan-chu-zhong-fu-jie-dian-lia-101c/)** ，难度为 **简单**。
 
-
-
 Tag : 「链表」
 
-存在一个按升序排列的链表，给你这个链表的头节点 head ，请你删除所有重复的元素，使每个元素 只出现一次 。
+
+
+存在一个按升序排列的链表，给你这个链表的头节点 `head`，请你删除所有重复的元素，使每个元素只出现一次 。
 
 返回同样按升序排列的结果链表。
 
-
 示例 1：
 ![](https://assets.leetcode.com/uploads/2021/01/04/list1.jpg)
+
 ```
 输入：head = [1,1,2]
+
 输出：[1,2]
 ```
 示例 2：
 ![](https://assets.leetcode.com/uploads/2021/01/04/list2.jpg)
-
 ```
 输入：head = [1,1,2,3,3]
+
 输出：[1,2,3]
 ```
 
 提示：
-* 链表中节点数目在范围 [0, 300] 内
-* -100 <= Node.val <= 100
+* 链表中节点数目在范围 $[0, 300]$ 内
+* $-100 <= Node.val <= 100$
 * 题目数据保证链表已经按升序排列
 
 ---
 
 ### 基本思路
 
-还是与 [82. 删除排序链表中的重复元素 II](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-list-ii/) 相似的解题：
+几乎所有的链表题目，都具有相似的解题思路。
 
-1. 建一个「虚拟头节点」dummy 以减少边界判断，往后的答案链表会接在 dummy 后面
+1. 建一个虚拟头节点 `dummy` 以减少边界判断，往后的答案链表会接在 `dummy` 后面
+2. 使用 `tail` 代表当前有效链表的结尾
+3. 通过原输入的 `head` 指针进行链表扫描
 
-2. 使用 tail 代表当前有效链表的结尾
-
-3. 通过原输入的 head 指针进行链表扫描
-
-
-代码：
-```java []
+Java 代码：
+```Java
 class Solution {
     public ListNode deleteDuplicates(ListNode head) {
         if (head == null) return head;
@@ -63,18 +61,83 @@ class Solution {
     }   
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    ListNode* deleteDuplicates(ListNode* head) {
+        if (!head) return head;
+        ListNode* dummy = new ListNode(-109);
+        ListNode* tail = dummy;
+        while (head) {
+            // 值不相等才追加，确保了相同的节点只有第一个会被添加到答案
+            if (tail->val != head->val) {
+                tail->next = head;
+                tail = tail->next;
+            }
+            head = head->next;
+        }
+        tail->next = nullptr;
+        return dummy->next;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def deleteDuplicates(self, head: Optional[ListNode]) -> Optional[ListNode]:
+        if not head: return head
+        dummy = ListNode(-109)
+        tail = dummy
+        while head:
+            # 值不相等才追加，确保了相同的节点只有第一个会被添加到答案
+            if tail.val != head.val:
+                tail.next = head
+                tail = tail.next
+            head = head.next
+        tail.next = None
+        return dummy.next
+```
+TypeScript 代码：
+```TypeScript
+function deleteDuplicates(head: ListNode | null): ListNode | null {
+    if (!head) return head;
+    const dummy: ListNode = new ListNode(-109);
+    let tail: ListNode | null = dummy;
+    while (head) {
+        // 值不相等才追加，确保了相同的节点只有第一个会被添加到答案
+        if (tail.val !== head.val) {
+            tail.next = head;
+            tail = tail.next;
+        }
+        head = head.next;
+    }
+    tail.next = null;
+    return dummy.next;
+};
+```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(1)$
 
-***
+---
 
 ### 拓展
 
-* 「重复元素全部删除」，该如何实现？
+如果问题变为「重复元素全部删除」，该如何实现？
 
-[82. 删除排序链表中的重复元素 II](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-list-ii/)
+还是类似的解题思路。
 
-```java
+1. 建一个虚拟头节点 `dummy` 以减少边界判断，往后的答案链表会接在 `dummy` 后面
+2. 使用 `tail` 代表当前有效链表的结尾
+3. 通过原输入的 `head` 指针进行链表扫描
+
+我们会确保「进入外层循环时 `head` 不会与上一节点相同」，因此插入时机：
+
+1. `head` 已经没有下一个节点，`head` 可以被插入
+2. `head` 有一下个节点，但是值与 `head` 不相同，`head` 可以被插入
+
+Java 代码：
+```Java
 class Solution {
     public ListNode deleteDuplicates(ListNode head) {
         ListNode dummy = new ListNode();
@@ -83,7 +146,7 @@ class Solution {
             // 进入循环时，确保了 head 不会与上一节点相同
             if (head.next == null || head.val != head.next.val) {
                 tail.next = head;
-                tail = tail.next;
+                tail = head;
             }
             // 如果 head 与下一节点相同，跳过相同节点
             while (head.next != null && head.val == head.next.val) head = head.next;
@@ -94,6 +157,66 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    ListNode* deleteDuplicates(ListNode* head) {
+        ListNode* dummy = new ListNode();
+        ListNode* tail = dummy;
+        while (head != nullptr) {
+            // 进入循环时，确保了 head 不会与上一节点相同
+            if (head->next == nullptr || head->val != head->next->val) {
+                tail->next = head;
+                tail = head;
+            }
+            // 如果 head 与下一节点相同，跳过相同节点
+            while (head->next != nullptr && head->val == head->next->val) head = head->next;
+            head = head->next;
+        }
+        tail->next = nullptr;
+        return dummy->next;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def deleteDuplicates(self, head: Optional[ListNode]) -> Optional[ListNode]:
+        dummy = ListNode()
+        tail = dummy
+        while head:
+            # 进入循环时，确保了 head 不会与上一节点相同
+            if not head.next or head.val != head.next.val:
+                tail.next = head
+                tail = head
+            # 如果 head 与下一节点相同，跳过相同节点
+            while head.next and head.val == head.next.val: head = head.next
+            head = head.next
+        tail.next = None
+        return dummy.next
+```
+TypeScript 代码：
+```TypeScript
+function deleteDuplicates(head: ListNode | null): ListNode | null {
+    const dummy: ListNode = new ListNode();
+    let tail: ListNode | null = dummy;
+    while (head) {
+        // 进入循环时，确保了 head 不会与上一节点相同
+        if (!head.next || head.val !== head.next.val) {
+            tail.next = head;
+            tail = head;
+        }
+        // 如果 head 与下一节点相同，跳过相同节点
+        while (head.next && head.val === head.next.val) head = head.next;
+        head = head.next;
+    }
+    tail.next = null;
+    return dummy.next;
+};
+```
+* 时间复杂度：$O(n)$
+* 空间复杂度：$O(1)$
 
 ---
 
